--- a/src/pages/sports.css
+++ b/src/pages/sports.css
@@ -2,6 +2,7 @@
     margin: 10px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .insta {
